--- a/.env
+++ b/.env
@@ -8,11 +8,14 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aazfge8l9j5lm4.caudaxnwveu9.ap-south-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ebdb
+DB_USERNAME=admin
+DB_PASSWORD=RGCSM7414
+
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
